<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seafoam"
    android:backgroundTint="#FFFFFF"
    tools:context=".CourseActivity">

    <TextView
        android:id="@+id/subject_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/course_subject"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onEnterClicked"
        android:shadowColor="@color/white"
        android:text="@string/enter"
        android:textColor="@color/seafoam"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_spinner"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/class_size_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="336dp"
        android:text="@string/year"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onDoneClicked"
        android:shadowColor="@color/white"
        android:text="@string/done"
        android:textColor="@color/seafoam"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_spinner"
        app:layout_constraintVertical_bias="0.77"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/number_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textCapCharacters"
        android:text=""
        android:textColor="@color/dark_seafoam"
        android:textColorHint="@color/seafoam"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="136dp"
        android:text="@string/course_number"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quarter_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quarter_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/class_size_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="436dp"
        android:text="Class Size"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/subject_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textCapCharacters"
        android:text=""
        android:textColor="@color/dark_seafoam"
        android:textColorHint="@color/seafoam"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/quarter_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="236dp"
        android:text="@string/quarter"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>