...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NameActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="320dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onConfirmClicked"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/name_view"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
...
